@@ -11,6 +11,7 @@ Changelog for 1.3.14
 * Fixed some menu items disappearing after upgrade (Chris T, bug 3504934)
 * Added default to country for initial setup (Chris T, bug 3496967)
 * Added recon data to COA files for a few extra locales (Chris T bug 3505102)
+* Clarified error message when contrib scripts not found (Chris T)
 
 Andres B is Andres Basile
 
